--- a/Tabuada/style.css
+++ b/Tabuada/style.css
@@ -33,8 +33,8 @@ section{
     align-items:center;
 }
 p{
-    max-width:300px;
-    min-width:10%;
+    width:300px;
+    
     text-align:center;
 }
 .form{
@@ -69,4 +69,16 @@ p{
     text-align:center;
     margin-top:15px;
     margin-bottom:25px;
+}
+@media screen and (max-width:1330px) {
+    p{
+        width:50%;
+    }
+    .form{
+        width:70%;
+    }
+    #botao{
+        width:70%;
+        font-size:10px;
+    }
 }
