--- a/Tabuada/style.css
+++ b/Tabuada/style.css
@@ -71,8 +71,9 @@ p{
     margin-bottom:25px;
 }
 @media screen and (max-width:1330px) {
-    section{
-        width:50%;
+    section, h1 {
+        margin-left:12%;
+        width:25%;
     }
     .form{
         width:70%;
